--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -42,4 +42,12 @@
             <data android:mimeType="text/plain"/>
         </intent>
     </queries>
+
+     <uses-permission android:name="android.permission.INTERNET"/>
+    <!-- opsional, kadang membantu -->
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE"/> 
+
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
+
 </manifest>
