--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,12 +31,21 @@ dependencies:
   flutter:
     sdk: flutter
 
-  # The following adds the Cupertino Icons font to your application.
-  # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
   firebase_core: ^4.4.0
   cloud_firestore: ^6.1.2
   firebase_auth: ^6.1.4
+  firebase_storage: ^13.0.6
+  geolocator: ^13.0.1
+  geocoding: ^3.0.0
+  google_maps_flutter: ^2.6.1
+  url_launcher: ^6.3.0
+  qr_flutter: ^4.1.0
+
+  # ✅ HARUS DI DALAM dependencies
+  flutter_localizations:
+    sdk: flutter
+  intl: 0.20.2
 
 dev_dependencies:
   flutter_test:
@@ -63,6 +72,11 @@ flutter:
     - assets/images/
     - assets/images/onboarding/
     - assets/icons/
+    - assets/images/music/
+    - assets/images/education/
+    - assets/images/film/
+    - assets/images/sports/
+    - assets/images/art/
 
   # To add assets to your application, add an assets section, like this:
   # assets:
